@@ -6734,8 +6734,8 @@ Like forward-line, but skip over (and don't count) invisible lines."
     (while (and (> n 0) (not done))
       ;; If the following character is currently invisible,
       ;; skip all characters with that same `invisible' property value.
-      (while (invisible-p (point))
-	(goto-char (next-char-property-change (point))))
+      (while (gnus-invisible-p (point))
+	(goto-char (gnus-next-char-property-change (point))))
       (forward-line 1)
       (if (eobp)
 	  (setq done t)
@@ -6744,9 +6744,9 @@ Like forward-line, but skip over (and don't count) invisible lines."
       (forward-line -1)
       (if (bobp) (setq done t)
 	(setq n (1+ n))
-	(while (and (not (bobp)) (invisible-p (1- (point))))
-	  (goto-char (previous-char-property-change (point))))))))
-    
+	(while (and (not (bobp)) (gnus-invisible-p (1- (point))))
+	  (goto-char (gnus-previous-char-property-change (point))))))))
+
 (defun gnus-summary-recenter ()
   "Center point in the summary window.
 If `gnus-auto-center-summary' is nil, or the article buffer isn't
