@@ -1,3 +1,10 @@
+2010-01-06  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-util.el (gnus-invisible-p, gnus-next-char-property-change)
+	(gnus-previous-char-property-change): New functions.
+
+	* gnus-sum.el (gnus-forward-line-ignore-invisible): Use them.
+
 2010-01-05  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* gnus-sum.el (gnus-forward-line-ignore-invisible): New function.
